--- a/cast-service/Dockerfile
+++ b/cast-service/Dockerfile
@@ -12,3 +12,8 @@ RUN pip install -r /app/requirements.txt \
     && rm -rf /root/.cache/pip
 
 COPY . /app/
+COPY ./app /app/app
+
+EXPOSE 80
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
